--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "terasaki-mayo/notification-twitter",
     "require": {
         "abraham/twitteroauth": "^0.7.4",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "knplabs/github-api": "^2.8",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "authors": [
         {
